<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:weightSum="3"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:id="@+id/tv_edit"
        android:textColor="#8BC34A"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name"
            android:text="@string/name"
            android:layout_margin="5dp"
            android:textColor="#E91E63"
            android:textSize="40sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email"
            android:text="@string/email"
            android:layout_margin="5dp"
            android:textColor="#673AB7"
            android:textSize="40sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_mobile"
            android:text="@string/mobile"
            android:layout_margin="5dp"
            android:textColor="#009688"
            android:textSize="40sp"/>
        <View
            android:layout_width="match_parent"
            android:background="#000"
            android:layout_margin="5dp"
            android:layout_height="10dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_margin="10dp"
        android:id="@+id/tv_delete"
        android:textColor="#FF5722"/>
</LinearLayout>